# Something-in-the-way

./: CMakeLists.txt  Compilire.txt  README.md  doctest.h  main.cpp  main.h  test.cpp
MyClient/: MyClient.sln
MyClient/MyClient/: Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  Form3.Designer.cs  Form3.cs  Program.cs
docs/: Doxyfile
docs/html/: annotated.html  class_linked_list-members.html  class_linked_list.html  class_stack-members.html  class_stack.html  classdoctest_1_1_assert_data_1_1_string_contains-members.html  classdoctest_1_1_assert_data_1_1_string_contains.html  classdoctest_1_1_contains-members.html  classdoctest_1_1_contains.html  classdoctest_1_1_context-members.html  classdoctest_1_1_context.html  classdoctest_1_1_string-members.html  classdoctest_1_1_string.html  classdoctest_1_1detail_1_1_context_scope-members.html  classdoctest_1_1detail_1_1_context_scope.html  classdoctest_1_1detail_1_1_exception_translator-members.html  classdoctest_1_1detail_1_1_exception_translator.html  classes.html  classstd_1_1basic__istream.html  classstd_1_1basic__ostream.html  classstd_1_1tuple.html  doctest_8h_source.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  hierarchy.html  index.html  main_8cpp.html  main_8h.html  main_8h_source.html  md__c_1_2_users_2_a_s_u_s_2_c_lion_projects_2smth_2_r_e_a_d_m_e.html  pages.html  struct_node-members.html  struct_node.html  struct_stack_node-members.html  (+109 more)
docs/latex/: annotated.tex  class_linked_list.tex  class_stack.tex  (+75 more)
(+37 files in other folders)
